@@ -7,6 +7,7 @@ import { FLAGS } from '../contexts/GameContext';
 import { BASE_STATES } from '../contexts/MapContext';
 import ModuleContext from '../contexts/ModuleContext';
 import { getHp, getMaxHp } from '../data/attributeHelper';
+import { Shape } from '@bucky24/react-canvas/build/main';
 
 export default function TheMap({
     map,
@@ -393,7 +394,29 @@ export default function TheMap({
                     })}
                 </Layer>
                 {selectionRectangles && <Layer id="selection">
-                    {selectionRectangles.map(({ x, y }) => {
+                    {selectionRectangles.map(({ x, y, direction }) => {
+                        const pointsByDir = {
+                            left: [
+                                { x: 14, y: 5, },
+                                { x: 7, y: 12, },
+                                { x: 14, y: 20, },
+                            ],
+                            right: [
+                                { x: 10, y: 5, },
+                                { x: 17, y: 12, },
+                                { x: 10, y: 20, },
+                            ],
+                            up: [
+                                { x: 12, y: 9, },
+                                { x: 5, y: 16, },
+                                { x: 20, y: 16, },
+                            ],
+                            down: [
+                                { x: 12, y: 16, },
+                                { x: 5, y: 9, },
+                                { x: 20, y: 9, },
+                            ],
+                        }
                         return <Cell
                             key={`selection_${x}_${y}`}
                             x={x}
@@ -401,11 +424,26 @@ export default function TheMap({
                             width={1}
                             height={1}
                             cb={(dims) => {
-                                return <Rect
-                                    {...dims}
-                                    color="#0f0"
-                                    fill={selectedRectangle?.x === x && selectedRectangle?.y === y}
-                                />
+                                return <>
+                                    <Rect
+                                        {...dims}
+                                        color="#0f0"
+                                        fill={selectedRectangle?.x === x && selectedRectangle?.y === y}
+                                    />
+                                    {pointsByDir[direction] && <>
+                                        <Shape
+                                            {...dims}
+                                            points={pointsByDir[direction]}
+                                            color="#000"
+                                            fill={true}
+                                        />
+                                        <Shape
+                                            {...dims}
+                                            points={pointsByDir[direction]}
+                                            color="#0f0"
+                                        />
+                                    </>}
+                                </>
                             }}
                         />
                     })}
